# ea-logic-copilot-workshop-code

./: .env.example  .gitignore  .prettierignore  AGENTS.md  Analysis_training.md  CHANGELOG.md  README.md  package-lock.json  package.json
.github/agents/: code-analysis.agent.md  constitution-checker.agent.md  logic-bug-orchestrator.agent.md  logic-bug-planner.agent.md  logic-bug-resolver-lite.agent.md  logic-bug-tutor.agent.md  test-runner.agent.md
.github/chatmodes/: builder.chatmode.md  cpp-architect.chatmode.md  cpp-developer.chatmode.md  cpp-tester.chatmode.md  planner.chatmode.md  reviewer.chatmode.md  squad-coordinator.chatmode.md
.github/instructions/: chat-mode-authoring.instructions.md  cpp-snippets.instructions.md  facilitator-script.instructions.md  learner-guide.instructions.md  prompt-authoring.instructions.md  reasoning-cot-tot.instructions.md  spec-kit-artifacts.instructions.md  survey-template.instructions.md
.github/prompts/: bootstrap-ci.prompt.md  bootstrap-copilot-customization.prompt.md  bootstrap-mcp.prompt.md  bootstrap-repo.prompt.md  build-graph.prompt.md  context-belt.prompt.md  delivery-runbook.prompt.md  demo-workspace-agents-md.prompt.md  demo-workspace-eastl-feature.prompt.md  demo-workspace-engine-module.prompt.md  demo-workspace-fixtures-bug-reports.prompt.md  demo-workspace-fixtures-crash-dumps.prompt.md  demo-workspace-instructions-prompts-chatmodes.prompt.md  demo-workspace-scaffold.prompt.md  demo-workspace-spec-kit-init.prompt.md  docs-sources.prompt.md  engagement-charter.prompt.md  escalation-paths.prompt.md  factory-client-profile-ea-games.prompt.md  factory-demo-patterns.prompt.md  factory-domain-profile-games.prompt.md  factory-stack-profile-cpp-game-engine.prompt.md  feedback-toolkit.prompt.md  logic-bug-sweep.prompt.md  orchestrate-full-build.prompt.md  review-adversarial.prompt.md  review-copilot-plan-gating.prompt.md  review-cpp-snippets.prompt.md  review-prompt-conformance.prompt.md  session-01-comprehension-at-scale.prompt.md  session-02-crash-dumps.prompt.md  session-03-logic-bugs.prompt.md  session-04-proactive-hunting.prompt.md  session-05-context-engineering.prompt.md  session-06-spec-kit-pt1.prompt.md  session-07-spec-kit-pt2.prompt.md  session-08-coding-agent.prompt.md  session-09-multi-agent-squad.prompt.md  slides-template.prompt.md
docs/: session-03-dry-run-history.md  session-03-logic-bugs-runbook.md  session-03-training-verification-checklist.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
output/ea-cpp-games/: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  build_sandbox.ps1  check_pixels.ps1  check_screenshot.ps1  clean_build.ps1  diag_interactive.ps1  reset_workshop.sh  run_capture.ps1  sample_grid.ps1  sample_quadrant.ps1  sample_quadrants.ps1  vcpkg.json
output/ea-cpp-games/apps/poc/: CMakeLists.txt  force_visible.h  force_visible.m  hello.c
output/ea-cpp-games/apps/sandbox/: CMakeLists.txt  Info.plist.in  README.md  app.cpp  app.h  dwm_flush.cpp  ea-sandbox.manifest  force_visible.h  force_visible.m  headless.cpp  headless.h  main.cpp  platform_win_diag.cpp  platform_win_diag.h  scene.cpp  scene.h  telemetry.cpp  telemetry.h  viewport.h
output/ea-cpp-games/cmake/: CompilerOptions.cmake  Dependencies.cmake
output/ea-cpp-games/fixtures/: seeded-bugs.md
output/ea-cpp-games/fixtures/bug-reports/: BUG-002.md  BUG-003.md  BUG-004.md  BUG-005.md  BUG-006.md  BUG-007.md  BUG-008.md  BUG-009.md  BUG-010.md
output/ea-cpp-games/fixtures/crash_dumps/BUG-001/: README.md  capture.ps1  capture.sh  repro.cpp
output/ea-cpp-games/include/engine_demo/: allocator.h  frame_budget.h
output/ea-cpp-games/include/engine_demo/ecs/: SUBSYSTEM.md  world.h
output/ea-cpp-games/include/engine_demo/physics/: constraint.h
output/ea-cpp-games/include/engine_demo/sim/: event_queue.h  game_loop.h  interpolator.h  replay_state.h  rng.h  timer.h
output/ea-cpp-games/specs/: README.md  constitution.md
output/ea-cpp-games/specs/fixed-string/: README.md
output/ea-cpp-games/specs/lockless-ring-buffer/: README.md
output/ea-cpp-games/src/: CMakeLists.txt
output/ea-cpp-games/src/engine_demo/: CMakeLists.txt  allocator.cpp  eastl_overrides.cpp  frame_budget.cpp
output/ea-cpp-games/src/engine_demo/ecs/: world.cpp
output/ea-cpp-games/src/engine_demo/physics/: constraint.cpp
output/ea-cpp-games/src/engine_demo/sim/: event_queue.cpp  game_loop.cpp  interpolator.cpp  replay_state.cpp  rng.cpp  timer.cpp
output/ea-cpp-games/tests/: CMakeLists.txt
output/ea-cpp-games/tests/engine_demo/: CMakeLists.txt  test_allocator.cpp  test_constraint.cpp  test_event_queue.cpp  test_frame_budget.cpp  test_game_loop.cpp  test_interpolator.cpp  test_replay_state.cpp  test_rng.cpp  test_sandbox_render.cpp  test_timer.cpp  test_world.cpp
output/ea-cpp-games/tools/crash-dump-mcp/: package.json
output/ea-cpp-games/tools/crash-dump-mcp/src/: index.ts
output/ea-cpp-games/tools/crash-dump-mcp/src/utils/: cdb-runner.ts  types.ts
output/ea-cpp-games/tools/worktree-mcp/: package.json
output/ea-cpp-games/tools/worktree-mcp/src/: index.ts
sessions/: README.md
sessions/01-comprehension-at-scale/: facilitator-script.md  learner-guide.md  pre-work-email.md  retro-survey.md  slides.outline.md
sessions/02-crash-dumps/: facilitator-script.md  learner-guide.md  pre-work-email.md  retro-survey.md  slides.outline.md
sessions/03-logic-bugs/: facilitator-script.md  learner-guide.md  logic-bug-workshop-training.docx  logic-bug-workshop-training.md  pre-work-email.md  qa-track.md  retro-survey.md  review-report.md  sdlc-walkthrough.md  slides.outline.md  ~$gic-bug-workshop-training.docx
sessions/04-proactive-hunting/: facilitator-script.md  learner-guide.md  pre-work-email.md  retro-survey.md  (+1 more)
tools/: extract-snippets.mjs  new-session.mjs  validate-prompts.mjs
tools/snippet-cmake-template/: CMakeLists.txt  main.cpp.in
(+69 files in other folders)
